# backend-rust

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/database/sql/: get_initial_user.rs  mod.rs
src/features/: mod.rs
src/features/auth/: routes.rs
src/features/realtime/: events.rs  mod.rs  routes.rs
src/middlewares/: auth.rs
src/utils/: decompress.rs  mod.rs
