[package]
name = "promtuz"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls","chrono","macros", "ipnetwork"] }
axum = { version="0.8.3", features = ["ws"] }
once_cell = "1.21.3"
axum-extra = { version = "0.10.1", features = ["cookie", "multipart", "typed-header"] }
chrono = { version = "0.4.40", features = ["serde"] }
axum-util = "0.2.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
flate2 = { version = "1.1.1", features = ["zlib"] }
argon2 = "0.5.3"
async-trait = "0.1.88"
hpke = "0.13.0"
rand = "0.9.0"
cuid = "1.3.3"
redis = { version = "0.30.0", features = ["aio", "r2d2", "tokio-comp", "async-std-comp", "smol-comp"] }
r2d2 = "0.8.10"
futures = "0.3.31"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
incremental = false
